--- a/bizhawk/config.ini
+++ b/bizhawk/config.ini
@@ -1535,7 +1535,7 @@
       }
     ],
     "UseRecentForRoms": false,
-    "LastRomPath": "D:\\git\\aLttP-UWDE\\bizhawk\\roms",
+    "LastRomPath": "D:\\Unity\\aLttP-UWDE\\bizhawk\\roms",
     "FirmwaresPathFragment": ".\\Firmware",
     "TempFilesFragment": ""
   },
@@ -1549,10 +1549,10 @@
   "TargetScanlineFilterIntensity": 128,
   "TargetDisplayFilter": 3,
   "DispFinalFilter": 1,
-  "DispUserFilterPath": "D:\\git\\aLttP-UWDE\\bizhawk\\shaders\\retroizer\\retroizer.cgp",
+  "DispUserFilterPath": "D:\\Unity\\aLttP-UWDE\\bizhawk\\shaders\\retroizer\\retroizer.cgp",
   "RecentRoms": {
     "recentlist": [
-      "*OpenRom*D:\\git\\aLttP-UWDE\\bizhawk\\roms\\RDX.smc",
+      "*OpenRom*D:\\Unity\\aLttP-UWDE\\bizhawk\\roms\\JP10.smc",
       "*OpenRom*D:\\git\\aLttP-UWDE\\bizhawk\\roms\\JP10.smc"
     ],
     "MAX_RECENT_FILES": 10,
@@ -1563,8 +1563,8 @@
   "SaveWindowPosition": true,
   "StartPaused": false,
   "StartFullscreen": false,
-  "MainWndx": 389,
-  "MainWndy": 219,
+  "MainWndx": 749,
+  "MainWndy": 254,
   "RunInBackground": true,
   "AcceptBackgroundInput": false,
   "AcceptBackgroundInputControllerOnly": false,
@@ -1737,7 +1737,9 @@
   "DisableLuaScriptsOnLoad": false,
   "RunLuaDuringTurbo": true,
   "RecentWatches": {
-    "recentlist": [],
+    "recentlist": [
+      "D:\\Unity\\aLttP-UWDE\\bizhawk\\Tools\\Zelda no Densetsu - Kamigami no Triforce (Japan).wch"
+    ],
     "MAX_RECENT_FILES": 8,
     "AutoLoad": false,
     "Frozen": false
@@ -1783,8 +1785,269 @@
       "RightPort": 1
     }
   },
-  "CommonToolSettings": {},
-  "CustomToolSettings": {},
+  "CommonToolSettings": {
+    "BizHawk.Client.EmuHawk.TAStudio": {
+      "_wndx": 208,
+      "_wndy": 208,
+      "Width": 525,
+      "Height": 615,
+      "SaveWindowPosition": true,
+      "TopMost": false,
+      "FloatingWindow": true,
+      "AutoLoad": false
+    }
+  },
+  "CustomToolSettings": {
+    "BizHawk.Client.EmuHawk.RamWatch": {
+      "Settings": {
+        "$type": "BizHawk.Client.EmuHawk.RamWatch+RamWatchSettings, EmuHawk",
+        "_wndx": 1322,
+        "_wndy": 5,
+        "Columns": {
+          "$type": "BizHawk.Client.EmuHawk.RollColumns, EmuHawk",
+          "$values": [
+            {
+              "Group": null,
+              "Width": 60,
+              "Left": 0,
+              "Right": 60,
+              "Name": "AddressColumn",
+              "Text": "Address",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 59,
+              "Left": 60,
+              "Right": 119,
+              "Name": "ValueColumn",
+              "Text": "Value",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 59,
+              "Left": 0,
+              "Right": 0,
+              "Name": "PrevColumn",
+              "Text": "Prev",
+              "Type": 2,
+              "Visible": false,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 60,
+              "Left": 119,
+              "Right": 179,
+              "Name": "ChangesColumn",
+              "Text": "Changes",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 59,
+              "Left": 0,
+              "Right": 0,
+              "Name": "DiffColumn",
+              "Text": "Diff",
+              "Type": 2,
+              "Visible": false,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 55,
+              "Left": 0,
+              "Right": 0,
+              "Name": "TypeColumn",
+              "Text": "Type",
+              "Type": 2,
+              "Visible": false,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 55,
+              "Left": 179,
+              "Right": 234,
+              "Name": "DomainColumn",
+              "Text": "Domain",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 128,
+              "Left": 234,
+              "Right": 362,
+              "Name": "NotesColumn",
+              "Text": "Notes",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            }
+          ]
+        },
+        "Width": 411,
+        "Height": 417,
+        "SaveWindowPosition": true,
+        "TopMost": true,
+        "FloatingWindow": true,
+        "AutoLoad": false
+      }
+    },
+    "BizHawk.Client.EmuHawk.RamSearch": {
+      "Settings": {
+        "$type": "BizHawk.Client.EmuHawk.RamSearch+RamSearchSettings, EmuHawk",
+        "_wndx": 1322,
+        "_wndy": 423,
+        "Columns": {
+          "$type": "BizHawk.Client.EmuHawk.RollColumns, EmuHawk",
+          "$values": [
+            {
+              "Group": null,
+              "Width": 60,
+              "Left": 0,
+              "Right": 60,
+              "Name": "AddressColumn",
+              "Text": "Address",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 59,
+              "Left": 60,
+              "Right": 119,
+              "Name": "ValueColumn",
+              "Text": "Value",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 59,
+              "Left": 119,
+              "Right": 178,
+              "Name": "PrevColumn",
+              "Text": "Prev",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 60,
+              "Left": 178,
+              "Right": 238,
+              "Name": "ChangesColumn",
+              "Text": "Changes",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            },
+            {
+              "Group": null,
+              "Width": 59,
+              "Left": 238,
+              "Right": 297,
+              "Name": "DiffColumn",
+              "Text": "Diff",
+              "Type": 2,
+              "Visible": true,
+              "Emphasis": false,
+              "Rotatable": false,
+              "RotatedHeight": null
+            }
+          ]
+        },
+        "PreviewMode": true,
+        "AlwaysExcludeRamWatch": false,
+        "AutoSearchTakeLagFramesIntoAccount": true,
+        "RecentSearches": {
+          "recentlist": [],
+          "MAX_RECENT_FILES": 8,
+          "AutoLoad": false,
+          "Frozen": false
+        },
+        "Width": 576,
+        "Height": 498,
+        "SaveWindowPosition": true,
+        "TopMost": true,
+        "FloatingWindow": true,
+        "AutoLoad": true
+      }
+    },
+    "BizHawk.Client.EmuHawk.TAStudio": {
+      "Settings": {
+        "$type": "BizHawk.Client.EmuHawk.TAStudio+TAStudioSettings, EmuHawk",
+        "RecentTas": {
+          "recentlist": [],
+          "MAX_RECENT_FILES": 8,
+          "AutoLoad": false,
+          "Frozen": false
+        },
+        "AutoPause": true,
+        "AutoRestoreLastPosition": false,
+        "FollowCursor": true,
+        "EmptyMarkers": false,
+        "ScrollSpeed": 6,
+        "FollowCursorAlwaysScroll": false,
+        "FollowCursorScrollMethod": "near",
+        "BranchCellHoverInterval": 1,
+        "SeekingCutoffInterval": 2,
+        "AutosaveInterval": 120000,
+        "AutosaveAsBk2": false,
+        "AutosaveAsBackupFile": false,
+        "BackupPerFileSave": false,
+        "SingleClickFloatEdit": false,
+        "OldControlSchemeForBranches": false,
+        "LoadBranchOnDoubleClick": true,
+        "DenoteStatesWithIcons": false,
+        "DenoteStatesWithBGColor": true,
+        "DenoteMarkersWithIcons": false,
+        "DenoteMarkersWithBGColor": true,
+        "MainVerticalSplitDistance": 0,
+        "BranchMarkerSplitDistance": 183,
+        "BindMarkersToInput": false
+      },
+      "TasViewFont": "Arial, 8.25pt, style=Bold"
+    }
+  },
   "DisableCheatsOnLoad": false,
   "LoadCheatFileByGame": true,
   "CheatsAutoSaveOnClose": true,
@@ -1809,7 +2072,9 @@
     "Frozen": false
   },
   "RecentMovies": {
-    "recentlist": [],
+    "recentlist": [
+      "D:\\Unity\\aLttP-UWDE\\bizhawk\\Movies\\default.tasproj"
+    ],
     "MAX_RECENT_FILES": 8,
     "AutoLoad": false,
     "Frozen": false
@@ -3185,24 +3450,36 @@
     "SNES Controller": {
       "Reset": "",
       "Power": "",
-      "P1 Up": "Up, J1 POV1U, X1 DpadUp, X1 LStickUp",
-      "P1 Down": "Down, J1 POV1D, X1 DpadDown, X1 LStickDown",
-      "P1 Left": "Left, J1 POV1L, X1 DpadLeft, X1 LStickLeft",
-      "P1 Right": "Right, J1 POV1R, X1 DpadRight, X1 LStickRight",
-      "P1 Select": "Space, J1 B9, X1 Back",
-      "P1 Start": "Enter, J1 B10, X1 Start",
-      "P1 Y": "A, J1 B1, X1 X",
-      "P1 X": "S, J1 B4, X1 Y",
-      "P1 B": "Z, J1 B2, X1 A",
-      "P1 A": "X, J1 B3, X1 B",
-      "P1 L": "W, J1 B5, X1 LeftShoulder",
-      "P1 R": "E, J1 B6, X1 RightShoulder",
+      "P1 Up": "J1 Y-",
+      "P1 Down": "J1 Y+",
+      "P1 Left": "J1 X-",
+      "P1 Right": "J1 X+",
+      "P1 Select": "J1 B7",
+      "P1 Start": "J1 B8",
+      "P1 Y": "J1 B4",
+      "P1 X": "J1 B3",
+      "P1 B": "J1 B2",
+      "P1 A": "J1 B1",
+      "P1 L": "J1 B5",
+      "P1 R": "J1 B6",
       "P1 Mouse Left": "Z, J1 B1, X1 X",
       "P1 Mouse Right": "X, J1 B2, X1 A",
       "P2 Trigger": "Z, J1 B1, X1 X",
       "P2 Cursor": "X, J1 B2, X1 A",
       "P2 Turbo": "A, J1 B3 X1 Y",
-      "P2 Pause": "S, J1 B4 X1 B"
+      "P2 Pause": "S, J1 B4 X1 B",
+      "P2 Up": "",
+      "P2 Down": "",
+      "P2 Left": "",
+      "P2 Right": "",
+      "P2 Select": "",
+      "P2 Start": "",
+      "P2 Y": "",
+      "P2 B": "",
+      "P2 X": "",
+      "P2 A": "",
+      "P2 L": "",
+      "P2 R": ""
     },
     "Nintendo 64 Controller": {
       "P1 A Up": "Up, J1 POV1U",
@@ -4564,6 +4841,34 @@
       "B": "",
       "A": "",
       "Option": "",
+      "Power": ""
+    },
+    "SNES Controller": {
+      "P1 Up": "",
+      "P1 Down": "",
+      "P1 Left": "",
+      "P1 Right": "",
+      "P1 Select": "",
+      "P1 Start": "",
+      "P1 Y": "",
+      "P1 B": "",
+      "P1 X": "",
+      "P1 A": "",
+      "P1 L": "",
+      "P1 R": "",
+      "P2 Up": "",
+      "P2 Down": "",
+      "P2 Left": "",
+      "P2 Right": "",
+      "P2 Select": "",
+      "P2 Start": "",
+      "P2 Y": "",
+      "P2 B": "",
+      "P2 X": "",
+      "P2 A": "",
+      "P2 L": "",
+      "P2 R": "",
+      "Reset": "",
       "Power": ""
     }
   },
